--- a/src/federator-draft/logging.conf
+++ b/src/federator-draft/logging.conf
@@ -24,5 +24,5 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=%m/%d/%Y %I:%M:%S %p
+format=[%(levelname)s] %(asctime)s - class(%(name)s): "%(message)s"
+datefmt=%m/%d/%Y %I:%M:%S%p
