--- a/src/federator-draft/environment.yml
+++ b/src/federator-draft/environment.yml
@@ -71,9 +71,7 @@ dependencies:
   - pip:
     - fuzzywuzzy==0.17.0
     - pandas==0.25.3
-    - python-levenshtein==0.12.0
     - pytz==2019.3
-    - scikit-learn==0.21.3
-    - sklearn==0.0
-prefix: C:\Users\maxkb\Anaconda3\envs\FRS-conda
+    - scikit-learn==0.22.2.post1
+prefix: C:\Users\Max\.conda\envs\FRS-conda
 
