--- a/src/federator-draft/logging.conf
+++ b/src/federator-draft/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,simpleExample
+keys=root
 
 [handlers]
 keys=consoleHandler
@@ -8,18 +8,12 @@ keys=consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler
-
-[logger_simpleExample]
-level=DEBUG
-handlers=consoleHandler
-qualname=simpleExample
-propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=simpleFormatter
 args=(sys.stdout,)
 
