--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Ignore:
 /src/federator-draft/datasets/*
 /src/federator-draft/frs/*
+*.pdf
 *.npy
 
 # Except:
 !/src/federator-draft/datasets/ml-latest-small/
+!/dissertation/images/*.pdf
 
 
 # Created by https://www.gitignore.io/api/python,pycharm,pycharm+all,pycharm+iml
