Finished, submission files added. final tweaks complete

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /src/federator-draft/frs/*
 *.pdf
 *.npy
+/presentation/Presentation_Audio_data/*
+*.aup
+*.au
 
 # Except:
 !/src/federator-draft/datasets/ml-latest-small/
